--- a/mICP-1/Mobile_Lesson1/Mobile_Lesson1/HelloWorldApp/app/src/main/res/values/strings.xml
+++ b/mICP-1/Mobile_Lesson1/Mobile_Lesson1/HelloWorldApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">HelloWorldApp</string>
+    <string name="app_name">Mobile ICP-1 APP</string>
     <string name="action_settings">Settings</string>
 </resources>
